# pfmr

./: .gitignore  README.md  exemplo.txt  pyproject.toml  spec.txt
knowledge/: README.md
knowledge/nodes/: libraries.toml  packages.toml
pfmr/: __init__.py  cli.py  models.py  pipeline.py
pfmr/data/: __init__.py  mappings.py  mappings.toml
pfmr/generators/: __init__.py  manifest.py
pfmr/learn/: __init__.py  cli.py  exporter.py  flathub.py  graph.py  manifest.py  sandbox.py  sdk_probe.py  shared_modules.py
pfmr/recipes/: __init__.py  db.py
pfmr/resolvers/: __init__.py  native_dependency.py  sdk_capability.py  sdk_extension.py  uv_resolver.py
pfmr/sandbox/: __init__py  errors.py  manifest.py  probe.py  runner.py
pfmr/utils/: __init__.py  logging.py
recipes/extensions/: rust-stable.yaml
recipes/native/: aalib.yaml  abseil-cpp.yaml  adapta-brila-eta.yaml  adapta-brila.yaml  adapta-eta.yaml  adapta-nokto-eta.yaml  adapta-nokto.yaml  adapta.yaml  addr2line.yaml  adios2.yaml  adwaita-icon-theme.yaml  adwaita-steam-gtk.yaml  airspy.yaml  airspyhf.yaml  akonadi-calendar.yaml  akonadi-contacts.yaml  akonadi-import-wizard.yaml  akonadi-mime.yaml  akonadi-search.yaml  akonadi.yaml  akonadiconsole.yaml  akregator.yaml  alembic.yaml  align-image-stack.yaml  alkimia.yaml  allegro.yaml  allegro5.yaml  alure.yaml  analitza.yaml  apcu.yaml  appstream-glib.yaml  appstream.yaml  apr-util.yaml  apr.yaml  april-asr.yaml  arc-theme.yaml  (+1681 more)
tests/: nodeids  test_learn.py  test_native_dependency.py  test_phase1.py  test_phase2.py  test_sandbox.py  test_sdk_extension.py
(+392 files in other folders)
