[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfmr"
version = "0.1.0"
description = "Python Flatpak Manifest Resolver — modern replacement for flatpak-pip-generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "tomli>=2.0; python_version < '3.11'",
    "packaging>=24",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
pfmr = "pfmr.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pfmr*"]
